--- a/airbnb-ssr/src/assets/scss/main.scss
+++ b/airbnb-ssr/src/assets/scss/main.scss
@@ -1,4 +1,9 @@
-body,html,p{
-    padding: 0;
-    margin: 0;
+body,
+html,
+p {
+	padding: 0;
+	margin: 0;
+}
+.container {
+	min-height: calc(100vh - 330px);
 }
